fix(router): :bug: prevent transition flicker on page load

--- a/src/styles/general.css
+++ b/src/styles/general.css
@@ -6,6 +6,13 @@
     -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
 }
 
+.preload * {
+    transition: none !important;
+    -webkit-transition: none !important;
+    -moz-transition: none !important;
+    -o-transition: none !important;
+}
+
 html,
 body {
     height: 100%;
